# cunzhi

./: .gitignore  ARCHITECTURE.md  BUILD.md  Cargo.toml  HOMEBREW.md  INSTALL.md  Makefile  README.md  README_EN.md  REFACTOR_SUMMARY.md  SYSTEM_PROMPT.md  TEST_REPORT.md  build.rs  build.sh  claude_desktop_config.json  cliff.toml  comment_to_author.md  dev.sh  eslint.config.js  eslint.config.mjs  index.html  install-universal.sh  install-windows.ps1  install.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr_description.md  quick-build.sh  simulate_response.js  tailwind.config.js  tauri.conf.json  test_markdown_popup.json  test_popup.sh  test_simple_popup.json  uninstall.sh  uno.config.ts  version.json  vite.config.js
.ai-review-memory/: context.md  metadata.json  patterns.md  preferences.md  rules.md
.cunzhi-memory/: context.md  metadata.json  preferences.md
.github/workflows/: auto-release.yml  build.yml  manual-release.yml  release.yml  update-homebrew.yml
Formula/: cunzhi.rb
docs/: RELEASE.md  auto-release-workflow.md  setup-release-approval.md
icons/: icon.icns
scripts/: README.md  postinstall.sh  release.sh  update-version.js  version.js
src/: App.vue  cli.rs  ipc.rs  lib.rs  main.js  main.rs  main.ts  mcp_server.rs  mcp_server_bin.rs  memory.rs  style.css
src/assets/css/: style.css
src/assets/sounds/: metadata.json
src/components/: McpPopup.vue  RequestHandler.vue  SettingsModal.vue  ThemeSettings.vue  WindowSettings.vue
src/components/common/: ThemeIcon.vue
src/components/settings/: ReplySettings.vue
src/config/: settings.rs
src/frontend/: App.vue  main.ts
src/frontend/components/: AppContent.vue  McpPopup.vue
src/frontend/composables/: .gitkeep  useAppInitialization.ts  useAppManager.ts  useAppState.ts  useAudioManager.ts  useEventHandlers.ts  useExitWarning.ts  useFontManager.ts  useKeyboard.ts  useMcpHandler.ts  useMcpTools.ts  usePopup.ts  usePopupManager.ts  useSettings.ts  useShortcuts.ts  useTheme.ts  useTransition.ts  useVersionCheck.ts
src/frontend/constants/: prompts.ts  telegram.ts  ui.ts
src/frontend/hooks/: useTheme.ts
src/frontend/i18n/: index.ts
src/frontend/test/: README.md  TestApp.vue  index.html  main.ts  vite.config.ts
src/frontend/theme/: colors.ts  index.ts
src/frontend/types/: popup.d.ts  tauri.d.ts
src/frontend/utils/: message.ts
src/mcp/: handlers.rs  mod.rs  server.rs  types.rs
src/mcp/handlers/: mod.rs  popup.rs  response.rs
src/mcp/tools/: ji.rs  mod.rs  zhi.rs
src/rust/: lib.rs  main.rs
src/ui/: audio.rs  commands.rs  mod.rs  window.rs
src/utils/: message.js  message.ts
(+101 files in other folders)
