[package]
name = "ai-review"
version = "0.1.0"
edition = "2021"
default-run = "ai-review-ui"

[[bin]]
name = "ai-review-ui"
path = "src/main.rs"

[[bin]]
name = "ai-review-mcp"
path = "src/mcp_server_bin.rs"

[dependencies]
tauri = { version = "2.0", features = [
  "tray-icon",
  "image-ico",
  "image-png"
] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1.0", features = [ "full" ] }
anyhow = "1.0"
uuid = { version = "1.0", features = [ "v4" ] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
default = []
