[package]
name = "cunzhi"
version = "0.0.19"
edition = "2021"
default-run = "等一下"

[[bin]]
name = "等一下"
path = "src/main.rs"

[[bin]]
name = "寸止"
path = "src/bin/mcp_server.rs"

[dependencies]
tauri = { version = "2.0", features = [
  "tray-icon",
  "image-ico",
  "image-png"
] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1.0", features = [ "full" ] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = [ "v4" ] }
chrono = { version = "0.4", features = [ "serde" ] }
dirs = "5.0"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
  "server",
  "transport-io"
] }
schemars = "0.8"
rodio = "0.19"
reqwest = { version = "0.11", features = [ "stream" ] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
default = []
